--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -108,7 +108,7 @@ h5 { font-size: 18px }
 
 h6 { font-size: 16px }
 
-.title-sep, .sidebar h2 { 
+.title-sep { 
     clear: both; 
     margin-bottom: 20px; 
     position: relative;
@@ -406,18 +406,18 @@ div.field-item img {
     text-align: center;
 }
 
-#top-content  div.col-md-3:nth-of-type(4n+1) {
+#top-content div.col-md-3:nth-of-type(4n+1) {
     margin-left: 0;
     clear: left;
 }
 
-#top-content  div.col-md-3 img {
+#top-content div.col-md-3 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-#top-content  div.col-md-3 h3 {
+#top-content div.col-md-3 h3 {
     font-size: 16px;
     color: #000;
     font-family: 'Open Sans',Sans-Serif;
@@ -678,6 +678,7 @@ div.field-item .gallery img {
     box-shadow: 0px 0px 5px rgba(0,0,0, 0.3);
     cursor: pointer;
 }
+
 #promoted-inside a:hover  {
     text-decoration: none;
 }
@@ -836,16 +837,16 @@ div.submitted {
 
 /* sidebar second */
 
-.widget_sidebar {
-	
-    color: #666666
+.region-sidebar-second .block { 
+	margin-bottom: 40px;
 }
 
-.widget_sidebar h3 {
+.region-sidebar-second h2 {
 	font-weight: bold;
 	font-size: 14px;
 	text-transform: uppercase;
     text-shadow: 1px 1px 1px #FFFFFF;
+    line-height: 36px
 }
 
 /* blog title */
