--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -164,6 +164,7 @@ div.social {
     right: 10px;
     top: 10px;
     float:right;
+    z-index:1;
 }
 
 div.social ul.social{
@@ -190,7 +191,7 @@ div.social ul.social li a {
     opacity: 0.5;
 }
 
-div.social ul.social li a:hover {
+div.social ul.social li a:hover, #social2 .social a:hover {
     opacity: 0.9;
 }
 
@@ -239,6 +240,9 @@ div.social ul.social li a.skype, #social2 .social a.skype {
         float: none;
         display: block;
         position: relative;
+        right: 0px;
+        top: 0px;
+        margin: 20px auto;
     }
 }
 
@@ -312,7 +316,6 @@ body.html.front #header-banner-wrapper {
     background: url(../images/local/bg_nav.png) top left repeat;
     padding: 3px 0;
     margin-top: 20px;
-    margin-bottom: 10px;
 }
 
 #main-navigation-inside {
