--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -593,12 +593,13 @@ div.field-item .gallery img {
 /*promoted-insied */
 
 #promoted-inside h2 {
+    margin: 0px 0px 0px;
     font-size: 34px;
     font-weight: 100;
     color: #868686;
     text-align: center;
     margin-bottom: 40px;
-    margin-top: 40px;
+    /*margin-top: 40px;*/
     line-height: 1;
     align-content: center;
 }
@@ -609,6 +610,7 @@ div.field-item .gallery img {
     margin: 0 auto;
     position: relative;
     z-index: 1;
+    padding: 50px 0px;
 }
 
 #promoted-inside div.col-md-4{
@@ -649,11 +651,12 @@ div.field-item .gallery img {
 	margin: 0;
 }
 
-#promoted-inside  h3 {
-	margin-bottom: 20px;
+#promoted-inside h3 {
+    margin: 0px 0px 0px;
+    margin-bottom: 20px;
 }
 
-#promoted-inside  h3.post-title a {
+#promoted-inside h3.post-title a {
 	font-size: 22px;
 	color: #E54D1B;
 	font-weight: normal;
