remove color on input border

--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -810,6 +810,10 @@ label {
     margin-bottom: 2px;
 }
 
+textarea:focus, input:focus {
+    outline: 0;
+}
+
 input.form-text, textarea.form-textarea {
 	background:#fff;
 	border: 1px solid #eee;
