--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -823,6 +823,16 @@ form.contact-form input.form-text {
     width: 50%;
 }
 
+@media only screen and (max-width: 767px) {
+    article.node-article textarea.form-textarea, article.node-blog textarea.form-textarea, div.grippie {
+        width: 100%;
+    }
+
+    form.contact-form input.form-text {
+        width: 100%;
+    }
+}
+
 form.contact-form textarea.form-textarea {
     width: 100%;
 }
