social 2 margin bottom

--- a/site/sites/all/themes/sunrise/css/style.css
+++ b/site/sites/all/themes/sunrise/css/style.css
@@ -243,7 +243,7 @@ div.social ul.social li a.skype, #social2 .social a.skype {
         position: relative;
         right: 0px;
         top: 0px;
-        margin: 20px auto;
+        margin: 20px auto 40px;
     }
 }
 
